# TaskMe

./: .env.local  pyproject.toml
core/: config.py  database.py
